Fixed vertical alignment of links.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,22 @@
-ul {
+.navigation-links {
     list-style: none;
+    display: inline;
+    vertical-align: middle;
+    font-size: 36px;
 }
 
 li {
     display: inline;
+    margin: 20px;
 }
 
-img{
+.logo{
     display: inline;
+    vertical-align: middle;
 }
 
-body {
-  margin: 0;
-  font-family: Verdana, Geneva, sans-serif;
-  font-size: 16px;
+body,p, h1 {
+  font-size: 18px;
   line-height: 22px;
-  color: #333333;
+  color: gray;
 }
